--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,13 +1,13 @@
 name: Pylint
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -15,9 +15,13 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      working-directory: Project_2_starter/project-1-project-1-14/
+        GITHUB_TOKEN: ${{secrets.GH_ACCESS_TOKEN}}
+        LOG_LEVEL: 1
+        LOG_FILE: log.log
       run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
+        ./run install
+    - name: Run Test file
+      working-directory: Project_2_starter/project-1-project-1-14/
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        ./run test
