--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -15,13 +15,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      working-directory: Project_2_starter/project-1-project-1-14/
-        GITHUB_TOKEN: ${{secrets.GH_ACCESS_TOKEN}}
+      working-directory: Project_2_starter/project-1-project-1-14/src
+        GITHUB_TOKEN: ${{GITHUB_TOKEN}}
         LOG_LEVEL: 1
         LOG_FILE: log.log
       run: |
         ./run install
     - name: Run Test file
-      working-directory: Project_2_starter/project-1-project-1-14/
+      working-directory: Project_2_starter/project-1-project-1-14/src
+        GITHUB_TOKEN: ${{GITHUB_TOKEN}}
+        LOG_LEVEL: 1
+        LOG_FILE: log.log
       run: |
         ./run test
