--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,3 +23,12 @@ jobs:
       run: |
         chmod +x ./run
         ./run install
+    - name: Run test file
+      working-directory: Project_2_starter/project-1-project-1-14
+      env:
+        GITHUB_TOKEN: ${{secrets.GH_ACCESS_TOKEN}}
+        LOG_FILE: info.log
+        LOG_LEVEL: 1
+      run: |
+        chmod +x ./run
+        ./run test
