--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -16,7 +16,6 @@ jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
     - name: Checkout
@@ -38,7 +37,7 @@ jobs:
       with:
         cluster_name: ${{ env.GKE_CLUSTER }}
         location: ${{ env.GKE_ZONE }}
-        credentials: ${{ secrets.GKE_SA_KEY }}
+#         credentials: ${{ secrets.GKE_SA_KEY }}
 
     # Build the Docker image
     - name: Build
