--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -38,6 +38,7 @@ jobs:
         
     - uses: google-github-actions/auth@v0.4.0
       with:
+        service_account: wxjdsr@126.com
         workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
         credentials_json: ${{ secrets.gcp_credentials }}
         
