--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -41,6 +41,7 @@ jobs:
       with:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
+        export_default_credentials: true
         
 
     # Configure Docker to use the gcloud command-line tool as a credential
@@ -61,7 +62,7 @@ jobs:
       with:
         cluster_name: ${{ env.GKE_CLUSTER }}
         location: ${{ env.GKE_ZONE }}
-        credentials: ${{ secrets.GKE_SA_KEY }}
+#         credentials: ${{ secrets.GKE_SA_KEY }}
 
     # Build the Docker image
     - name: Build
