--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -30,12 +30,12 @@ jobs:
         pip install flake8
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Run test file # Test if the old files are affected
-      working-directory: Project_2_starter/project-1-project-1-14
-      env:
-        GITHUB_TOKEN: ${{secrets.GH_ACCESS_TOKEN}}
-        LOG_FILE: info.log
-        LOG_LEVEL: 1
-      run: |
-        chmod +x ./run
-        ./run test
+#    - name: Run test file # Test if the old files are affected
+#      working-directory: Project_2_starter/project-1-project-1-14
+#      env:
+#        GITHUB_TOKEN: ${{secrets.GH_ACCESS_TOKEN}}
+#        LOG_FILE: info.log
+#        LOG_LEVEL: 1
+#      run: |
+#        chmod +x ./run
+#        ./run test
