--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -36,18 +36,18 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-#    # Setup gcloud CLI
-#    - uses: google-github-actions/setup-gcloud@v0.2.0
-#      with:
-#        service_account_key: ${{ secrets.GKE_SA_KEY }}
-#        project_id: ${{ secrets.GKE_PROJECT }}
-#        # TODO: this part needs an authentication configuration
-#
-#    # Configure Docker to use the gcloud command-line tool as a credential
-#
-#    # helper for authentication
-#    - run: |-
-#        gcloud --quiet auth configure-docker
+    # Setup gcloud CLI
+    - uses: google-github-actions/setup-gcloud@v0.2.0
+      with:
+        service_account_key: ${{ secrets.GKE_SA_KEY }}
+        project_id: ${{ secrets.GKE_PROJECT }}
+        # TODO: this part needs an authentication configuration
+
+    # Configure Docker to use the gcloud command-line tool as a credential
+
+    # helper for authentication
+    - run: |-
+        gcloud --quiet auth configure-docker
 #
 #    # Cited from: https://writeabout.net/2021/11/01/deploy-to-google-kubernetes-engine-using-github-actions/
 ##     - uses: google-github-actions/auth@v0.4.0
